syntax = "proto3";

package pb;

option go_package = "/pb";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service matchingEngine {
    rpc PlaceOrder(PlaceOrderReq) returns (OrdersRes) {}
    rpc CancelOrder(CancelOrderReq) returns (order) {}

    rpc GetCurrentOrders(UserIDReq) returns (OrdersRes) {}
    rpc GetOrders(UserIDReq) returns (OrdersRes) {}

    rpc CreateOrderBook(OrderBookSymbol) returns (google.protobuf.Empty) {}
    rpc DeleteOrderBook(OrderBookSymbol) returns (google.protobuf.Empty) {}
}

message PlaceOrderReq {
    int64 userID = 1;
    bool isBid = 2;
    string symbol = 3;
    string qty = 4;
    string price = 5;
    string type = 6;
}

message OrdersRes {
    repeated order Orders = 1;
}

message CancelOrderReq {
    int64 ID = 1;
}

message UserIDReq {
    int64 userID = 1;
}

message OrderBookSymbol {
    string symbol = 1;
}


message order {
    int64 ID = 1;
    int64 userID = 2;
    bool isBid = 3;
    string symbol = 4;
    string price = 5;
    string qty = 6;
    string sizeFilled = 7;
    string status = 8;
    string type = 9;
    google.protobuf.Timestamp created_at = 10;
    google.protobuf.Timestamp closed_at = 11;
}

message match {
    int64 counterOrderID = 1;
    int64 counterUserID = 2;
    string qty = 3;
    string price = 4;
}